--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^19.0.0",
     "react-custom-roulette-r19": "^2.0.3",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
