--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-google-maps/api": "^2.20.7",
     "clsx": "^2.1.1",
     "next": "15.3.2",
+    "radash": "^12.1.1",
     "react": "^19.0.0",
     "react-custom-roulette-r19": "^2.0.3",
     "react-dom": "^19.0.0",
