--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-custom-roulette-r19": "^2.0.3",
     "react-dom": "^19.0.0",
     "react-rewards": "^2.1.0",
+    "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
