--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@vis.gl/react-google-maps": "^1.5.5",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.546.0",
+    "msw": "^2.12.1",
     "next": "16.0.0",
     "radash": "^12.1.1",
     "react": "^19.0.0",
@@ -34,5 +36,10 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
