--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.8",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@vis.gl/react-google-maps": "^1.5.5",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
