--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-rewards": "^2.1.0",
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
